src/test/deca/context/valid/ContextAvecObjet/InstanceOf/instanceAA.deca
// Description:
//    test basique d'instance
//
// Resultats:
//    ok
//
class A{}
{
    A a = new A();
    boolean x = a instanceof A;
}
